排除 tools.jar 打包